--- a/src/app/home-views/home-views.component.css
+++ b/src/app/home-views/home-views.component.css
@@ -336,6 +336,8 @@ li#itm-signin:hover {
     align-items: center;
     padding-bottom: 63px;
     z-index: 10;
+    margin-top: -9vh;
+    position: relative;
 }
 #scroll-down a {
     margin: 0 auto;
